# 2048

./: README
trunk/: CMakeLists.txt
trunk/include/: grid.h  strategy.h
trunk/src/: game.c  game_sdl.c  grid.c  strat_eff.c  strategy.c  strategy_efficient.c
